--- a/index.html
+++ b/index.html
@@ -1,18 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w==" crossorigin="anonymous" />
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+      integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="CSS/header.css" />
     <title>HTML-CSS-Exam</title>
-</head>
-<body>
-    <header>
-        <div>
-            <div></div>
-            <div></div>
+  </head>
+  <body>
+    <header class="navbar">
+      <div class="navbar--main--container">
+        <div class="navbar--container--name">
+          <h2 class="container--name">gtd.</h2>
         </div>
+        <div class="navbar--container--input">
+          <img class="search--icon--svg" src="IMG/search.svg" alt="" />
+          <input class="search--input" type="text" placeholder="Search" />
+        </div>
+      </div>
     </header>
-</body>
+  </body>
 </html>
