added form and section

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="CSS/header.css" />
+    <link rel="stylesheet" href="CSS/section-content.css" />
     <title>HTML-CSS-Exam</title>
   </head>
   <body>
@@ -20,10 +21,16 @@
           <h2 class="container--name">gtd.</h2>
         </div>
         <div class="navbar--container--input">
-          <img class="search--icon--svg" src="IMG/search.svg" alt="" />
-          <input class="search--input" type="text" placeholder="Search" />
+          <form action="">
+            <img class="search--icon--svg" src="IMG/search.svg" alt="" />
+            <input class="search--input" type="text" placeholder="Search" />
+          </form>
         </div>
       </div>
     </header>
+    <section class="main--content">
+      <h2 class="content--name">Hello, we're gtd.</h2>
+      <div class="bg--white--line"></div>
+    </section>
   </body>
 </html>
