added img and text

--- a/index.html
+++ b/index.html
@@ -29,8 +29,23 @@
       </div>
     </header>
     <section class="main--content">
-      <h2 class="content--name">Hello, we're gtd.</h2>
       <div class="bg--white--line"></div>
+      <h2 class="content--name">Hello, we're gtd.</h2>
+      <div class="content--first-container--imgs">
+        <div class="img img-1"></div>
+        <div class="img img-2"></div>
+        <div class="img img-3"></div>
+      </div>
+      <h2 class="content--second-name--golden">How it started</h2>
+      <p class="content--paragraph">
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
+        vitae laudantium animi voluptate recusandae officia veniam sequi itaque.
+        Voluptas velit voluptate nostrum consectetur vitae tempora
+        necessitatibus labore facere quod doloribus incidunt consequuntur
+        asperiores inventore, eius possimus praesentium quidem laborum mollitia
+        repellendus aliquid nihil molestiae nesciunt quia? Corrupti nostrum in
+        eum!
+      </p>
     </section>
   </body>
 </html>
