--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
         repellendus aliquid nihil molestiae nesciunt quia? Corrupti nostrum in
         eum!
       </p>
+      <div class="content--second-container--grid">
+        <div class="img-1 img-amber"></div>
+        <div class="second-container--about">
+          <h2 class="second-container--name--golden">Amber</h2>
+          <p class="second-container--link"><a class="links" href="#">amber@gtd.co</a></p>
+        </div>
+        <div class="img-2 img-billie"></div>
+        <div class="second-container--about">
+          <h2 class="second-container--name--golden">Billie</h2>
+          <p class="second-container--link"><a class="links" href="#">billie@gtd.co</a></p>
+          <p class="second-container--link">(123) 456-7890</p>
+        </div>
+      </div>
     </section>
   </body>
 </html>
