--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     />
     <link rel="stylesheet" href="CSS/header.css" />
     <link rel="stylesheet" href="CSS/section-content.css" />
+    <link rel="stylesheet" href="CSS/footer.css" />
     <title>HTML-CSS-Exam</title>
   </head>
   <body>
@@ -50,15 +51,48 @@
         <div class="img-1 img-amber"></div>
         <div class="second-container--about">
           <h2 class="second-container--name--golden">Amber</h2>
-          <p class="second-container--link"><a class="links" href="#">amber@gtd.co</a></p>
+          <p class="second-container--link">
+            <a class="links" href="#">amber@gtd.co</a>
+          </p>
         </div>
         <div class="img-2 img-billie"></div>
         <div class="second-container--about">
           <h2 class="second-container--name--golden">Billie</h2>
-          <p class="second-container--link"><a class="links" href="#">billie@gtd.co</a></p>
+          <p class="second-container--link">
+            <a class="links" href="#">billie@gtd.co</a>
+          </p>
           <p class="second-container--link">(123) 456-7890</p>
         </div>
       </div>
     </section>
+    <footer class="footer">
+      <div class="main--footer-container">
+        <div class="footer-container--content">
+          <h3 class="container--content--name">Team</h3>
+          <p class="container--content--paragraph"><a href="#">Amber</a></p>
+          <p class="container--content--paragraph"><a href="#">Billie</a></p>
+          <p class="container--content--paragraph"><a href="#">Scarlett</a></p>
+          <p class="container--content--paragraph"><a href="#">Join us!</a></p>
+        </div>
+        <div class="footer-container--content">
+          <h3 class="container--content--name">Learn More</h3>
+          <p class="container--content--paragraph"><a href="#">Manifesto</a></pa>
+          <p class="container--content--paragraph"><a href="#">Works</a></pa>
+          <p class="container--content--paragraph"><a href="#">Stories</a></pa>
+        </div>
+        <div class="footer-container--content">
+          <h3 class="container--content--name">Meet Us</h3>
+          <p class="container--content--paragraph"><a href="#">Studio</a></p>
+          <p class="container--content--paragraph"><a href="#">Community</a></p>
+          <p class="container--content--paragraph"><a href="#">Workshops</a></p>
+        </div>
+        <div class="footer-container--content">
+          <h3 class="container--content--name">Contact</h3>
+          <p class="container--content--paragraph"><a href="#">Twitter</a></p>
+          <p class="container--content--paragraph"><a href="#">Facebook</a></p>
+          <p class="container--content--paragraph"><a href="#">Instagram</a></p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
