added link and class

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="CSS/header.css" />
     <link rel="stylesheet" href="CSS/section-content.css" />
     <link rel="stylesheet" href="CSS/footer.css" />
+    <link rel="stylesheet" href="CSS/responsive-media.css">
     <title>HTML-CSS-Exam</title>
   </head>
   <body>
@@ -37,7 +38,8 @@
         <div class="img img-3"></div>
       </div>
       <h2 class="content--second-name--golden">How it started</h2>
-      <p class="content--paragraph">
+      <div class="content--paragraph">
+        <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Assumenda
         vitae laudantium animi voluptate recusandae officia veniam sequi itaque.
         Voluptas velit voluptate nostrum consectetur vitae tempora
@@ -46,16 +48,17 @@
         repellendus aliquid nihil molestiae nesciunt quia? Corrupti nostrum in
         eum!
       </p>
+      </div>
       <div class="content--second-container--grid">
         <div class="img-1 img-amber"></div>
-        <div class="second-container--about">
+        <div class="second-container--about about-1">
           <h2 class="second-container--name--golden">Amber</h2>
           <p class="second-container--link">
             <a class="links" href="#">amber@gtd.co</a>
           </p>
         </div>
         <div class="img-2 img-billie"></div>
-        <div class="second-container--about">
+        <div class="second-container--about about-2">
           <h2 class="second-container--name--golden">Billie</h2>
           <p class="second-container--link">
             <a class="links" href="#">billie@gtd.co</a>
